<resources>
    <string name="app_name">Tablets</string>
    <string name="action_settings">Settings</string>
    <string name="tablet_title">Tablet Choices</string>
    <string name="name1">Amozon Tablet</string>
    <string name="name2">Dragon Tablet</string>
    <string name="name3">HP Tablet</string>
    <string name="name4">LG Tablet</string>
    <string name="name5">Samsung Tablet</string>
    <string name="name6">Sony Tablet</string>
    <string name="name">Name: </string>
    <string name="system">System: </string>
    <string name="dimensions">Dimensions:</string>
    <string name="weight">Weight:</string>
    <string name="checkbox">Compare</string>
    <string name="compareButn">Compare </string>
    <string name="toastmessage1">you can only select 3 items to compare!</string>
    <string name="toastmessage2">No item is checked, you have to at least choose one!</string>
    <string name="title_activity_compare">compare</string>
    <string name="doneButton">Done</string>
    <string name="cd1">tab1I</string>
    <string name="cd2">tab2</string>
    <string name="cd3">tab3</string>
    <string name="like_it">I like It !</string>

</resources>
